# fastapi-playground

./: .gitignore  README.md  pyproject.toml
fastapi-many-to-many/: foo.db  with-extra-data-1.py  with-extra-data-2.py  without-extra-data-1.py
fastapi-tdd-docker/project/: requirements.txt
fastapi-tdd-docker/project/app/: config.py  db.py  main.py
fastapi-tdd-docker/project/app/api/: crud.py  ping.py  summaries.py
fastapi-tdd-docker/project/app/models/: tortoise.py
fastapi-tdd-docker/project/tests/: __init__.py  conftest.py  test_summaries.py
modern-apis-with-fastapi/ch03-first-api/: api_with_response_model.py  main.py
modern-apis-with-fastapi/ch04-language-foundations/models/: orders_v1.py  orders_v2.py
modern-apis-with-fastapi/ch05-a-realistic-api/: main.py
modern-apis-with-fastapi/ch05-a-realistic-api/services/: openweather_service.py
modern-apis-with-fastapi/ch06-error-handling-and-perf/api/: weather_api.py
modern-apis-with-fastapi/ch06-error-handling-and-perf/infrastructure/: weather_cache.py
modern-apis-with-fastapi/ch06-error-handling-and-perf/services/: openweather_service.py
modern-apis-with-fastapi/ch07-inbound-data/: main.py
modern-apis-with-fastapi/ch07-inbound-data/api/: weather_api.py
modern-apis-with-fastapi/ch07-inbound-data/services/: report_service.py
python-pubsub-application/: intermediate_python.ipynb
python-pubsub-application/my-pubsub/: models.py  pubsub.py  rest_api_server.py  session.py
sqlalchemy2-in-practice/: db.py  explore.sql  import_products.py  models.py  retrofun.sqlite
sqlalchemy2-in-practice/exercises/: chapter_2.py
