[tool.poetry]
name = "fastapi-playground"
version = "0.1.0"
description = ""
authors = ["Trung Nghĩa Hoàng <46636991+trungnghiahoang96@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_playground"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
black = "^23.7.0"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
