[tool.poetry]
name = "fastapi-playground"
version = "0.1.0"
description = ""
authors = ["Trung Nghĩa Hoàng <46636991+trungnghiahoang96@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_playground"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
black = "^23.7.0"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"
aiosqlite = "^0.19.0"
alembic = "^1.11.2"
greenlet = "^2.0.2"
mako = "^1.2.4"
markupsafe = "^2.1.3"
python-dotenv = "^1.0.0"
typing-extensions = "^4.7.1"
psycopg2-binary = "^2.9.7"
redis = "^5.0.1"
jupyterlab-code-formatter = "^2.2.1"
jupyterlab = "^4.0.9"
jupyterlab-lsp = "^5.0.1"
mypy = "^1.8.0"
bottle = "^0.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
